--- a/src/pages/spotify/widgets/styles.css
+++ b/src/pages/spotify/widgets/styles.css
@@ -1,32 +1,22 @@
-.spotify .cover::before {
-    z-index: -1;
-    content: "";
-    position: absolute;
-    left: -5%;
-    right: -5%;
-    bottom: -5%;
-    top: -5%;
-    background-color: var(--backdrop-color);
-    filter: blur(30px);
+
+.progress div {
+    background: #fff !important;
 }
 
-.spotify .cover {
-    position: relative;
+.logo {
+    filter: drop-shadow(2px 2px 2px rgba(0,0,0,.25));
 }
 
-
-.spotify .text::before {
-    z-index: -2;
-    content: "";
-    position: absolute;
-    left: -2rem;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    background: linear-gradient(to right, var(--backdrop-color), rgba(0,0,0,.5));
-    filter: blur(30px);
+.text-two-lines {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
-.spotify .text {
-    position: relative;
+.text-one-line {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
