added background freeze

--- a/src/pages/spotify/widgets/progressBar/styles.css
+++ b/src/pages/spotify/widgets/progressBar/styles.css
@@ -1,3 +1,4 @@
 .progress div {
     background: linear-gradient(to right, var(--prog-color, white), var(--prog-color-end, white)) !important;
+    border-radius: var(--chakra-radii-full);
 }
